<resources>
    <string name="app_name">Погодушка</string>
    <string name="result_current_constraint_layout_city_example_name">Москва</string>
    <string name="result_current_constraint_layout_city_example_coordinates">lt/ln: 55.755826, 37.617299900000035</string>
    <string name="result_current_constraint_layout_temperature_label_example_text">Температура:</string>
    <string name="result_current_constraint_layout_temperature_value_example_text">+15</string>
    <string name="result_current_constraint_layout_feelslike_label_example_text">Ощущается как:</string>
    <string name="result_current_constraint_layout_feelslike_value_example_text">-23</string>
    <string name="add_string_info_title_text">Введите или уточните\nданные о новом месте</string>
    <string name="add_city_info_button_cancel_text">Отмена</string>
    <string name="add_string_info_city_name_title_text">Название места</string>
    <string name="add_string_info_city_field_example_text"></string>
    <string name="add_city_info_lat_title">Широта (Latitude), в десятичных долях</string>
    <string name="add_city_info_lat_field_example_text"></string>
    <string name="add_city_info_lon_title">Долгота (Longitude), в десятичных долях</string>
    <string name="add_city_info_lon_lon_field_example_text"></string>
    <string name="add_city_info_country_title">Страна</string>
    <string name="add_city_info_country_field_text">Россия</string>
    <string name="add_city_info_button_ok_text">Сохранить</string>
    <string name="search_city_title_text">Найти место среди ранее заданных</string>
    <string name="search_city_name_field_example_text">Москва</string>
    <string name="search_city_country_title_text">Страна</string>
    <string name="search_city_country_field_example_text">Россия</string>
    <string name="search_city_button_cancel_text">Отмена</string>
    <string name="search_city_button_ok_text">Найти место</string>
    <string name="recycler_item_text_view_example_text">Москва</string>
    <string name="result_current_down_help_text">Нажмите сюда для возврата к списку мест...</string>
    <string name="try_another">Попробовать ещё</string>
    <string name="app_menu_action_add_city_title_text">Добавить место</string>
    <string name="app_menu_action_delete_city_text">Удалить место</string>
    <string name="app_menu_action_show_card_city_text">Карточка места</string>
    <string name="app_bar_title"></string>
    <string name="context_menu_action_delete_city_text">Удалить место</string>
    <string name="context_menu_action_show_card_text">Карточка места</string>
    <string name="context_menu_action_return_text">Вернуться к списку</string>
    <string name="dialog_fragment_delete_conformation_button_no_text">Нет</string>
    <string name="dialog_fragment_delete_conformation_button_yes_text">Да</string>
    <string name="dialog_fragment_delete_conformation_title_text">Подтвердите\nудаление места\n</string>
    <string name="card_city_title_text">Карточка места</string>
    <string name="card_city_city_name_text">Название места</string>
    <string name="card_city_city_name_field_example_text">Москва</string>
    <string name="card_city_lat_text">Широта (Latitude),\nв десятичных долях</string>
    <string name="card_city_lat_field_example_text">55.7522</string>
    <string name="card_city_lon_text">Долгота (Latitude),\nв десятичных долях</string>
    <string name="card_city_lon_field_example_text">37.6156</string>
    <string name="card_city_country_info_text">Страна</string>
    <string name="card_city_country_info_field_example_text">Россия</string>
    <string name="card_city_info_button_cancel_text">Отмена</string>
    <string name="card_city_info_button_ok_text">Сохранить</string>
    <string name="card_city_lat_comments_text">(можно не заполнять)</string>
    <string name="card_city_lon_comments_text">(можно не заполнять)</string>
    <string name="input_city_lat_comments_text">(можно не заполнять)</string>
    <string name="result_current_constraint_layout_condition_label_example_text">Условия</string>
    <string name="error">ОШИБКА</string>
    <string name="error_no_such_places">НЕТ КАРТОЧЕК ТАКИХ МЕСТ.\nДобавьте их через ВЕРХНЕЕ МЕНЮ</string>
    <string name="error_no_connection">Сеть Интернет недоступна</string>
    <string name="error_dataweather_null">Данные не загружены</string>
    <string name="error_empty_name_in_contacts_request">Поле \"Имя\" не заполнено</string>
    <string name="error_maps_search_address">Пустой поисковый запрос.\nВведите сначала адрес</string>
    <string name="error_maps_search_address_not_success">По Вашему адресу место не найдено</string>
    <string name="success">Данные УСПЕШНО загружены</string>
    <string name="success_load_from_database">Данные из базы данных успешно загружены</string>
    <string name="clear">Ясно</string>
    <string name="partly_cloudy">Редкие облака</string>
    <string name="cloudy">Облачно</string>
    <string name="overcast">Пасмурно</string>
    <string name="partly_cloudy_and_light_rain">Редкие облака и лёгкий дождь</string>
    <string name="cloudy_and_light_rain">Облачно и лёгкий дождь</string>
    <string name="overcast_and_light_rain">Пасмурно и лёгкий дождь</string>
    <string name="partly_cloudy_and_rain">Редкие облака и дождь</string>
    <string name="overcast_and_rain">Пасмурно и дождь</string>
    <string name="cloudy_and_rain">Облачно и дождь</string>
    <string name="overcast_thunderstorms_with_rain">Пасмурно, гром и дождь</string>
    <string name="overcast_and_wet_snow">Пасмурно и мокрый снег</string>
    <string name="partly_cloudy_and_light_snow">Редкие облака и лёгкий снег</string>
    <string name="partly_cloudy_and_snow">Редкие облака и снег</string>
    <string name="overcast_and_snow">Пасмурно и снег</string>
    <string name="cloudy_and_light_snow">Облачно и лёгкий снег</string>
    <string name="overcast_and_light_snow">Пасмурно и лёгкий снег</string>
    <string name="cloudy_and_snow">Облачно и снег</string>
    <string name="founded_city_button_cancel_text">Отмена</string>
    <string name="founded_city_title_text">Выберите\nуточнённое\nместо:</string>
    <string name="app_menu_action_open_weather_history_title_text">История погоды</string>
    <string name="result_weather_history_cancel_text">Отмена</string>
    <string name="result_weather_history_title_text">Выберите место\nс погодными данными:</string>
    <string name="app_menu_open_contacts_title_text">Получить контакты</string>
    <string name="fragment_contacts_request_title_text">Укажите ФИО человека\nв контактах с адресом места\nдля поиска погоды</string>
    <string name="fragment_contacts_request_family_title_text">Фамилия:</string>
    <string name="fragment_contacts_request_name_title_text">Имя:</string>
    <string name="fragment_contacts_request_family_field_comments_text">(можно не заполнять)</string>
    <string name="fragment_contacts_request_family_field_text" />
    <string name="fragment_contacts_request_name_field_text" />
    <string name="fragment_contacts_request_patronymic_title_text">Отчество:</string>
    <string name="fragment_contacts_request_patronymic_field_text" />
    <string name="fragment_contacts_request_patronymiс_comments_text">(можно не заполнять)</string>
    <string name="fragment_contacts_request_button_cancel_text">Отмена</string>
    <string name="fragment_contacts_request_button_ok_text">Получить данные</string>
    <string name="contact_founded_city_button_cancel_text">Отмена</string>
    <string name="contact_founded_city_title_text">Выберите\nодно из найденых\nв контактах мест:</string>
    <string name="geocoder_dialog_title">Доступ к геолокации</string>
    <string name="geocoder_dialog_message">Для добавления в список мест Ваших текущих координат нужно предоставить доступ к геолокации</string>
    <string name="geocoder_dialog_positive_answer">Предоставить доступ</string>
    <string name="geocoder_dialog_negative_answer">Отказать в доступе</string>
    <string name="geocoder_weather_dialog_title">Ваши координаты</string>
    <string name="geocoder_weather_positive_answer">Сохранить</string>
    <string name="geocoder_weather_negative_answer">Отмена</string>
    <string name="app_menu_open_google_map_title_text">Открыть карту</string>
    <string name="fragment_maps_button_place_search_text">Найти</string>
    <string name="fragment_maps_search_address_field_text" />
    <string name="fragment_maps_address_help_text">Введите адрес места:</string>
    <string name="fragment_maps_button_place_search_and_save_text">Найти и сохранить</string>
    <string name="firebase_dialog_message_title">Открыть приложение</string>
    <string name="app_menu_action_help">О программе</string>
    <string name="fragment_help_text_first">
        \n
        Добрый день.\n
        Вашему вниманию предлагается приложение \"Погодушка\".\n
        Оно предназначено для определения погоды в любом месте Земного шара.
        Источник погодных данных - \"Яндекс.Погода\", тариф \"Погода на вашем сайте\".\n
        Ограничение - определение погоды не более, чем в 50 местах в сутки.\n
        Место для определения погоды можно задать как по названию, так и с использованием \"Google Map\", просто кликнув на карте или указав интересующее место.
        \n
        При запуске приложения, вам доступна сразу или информация о ранее просмотренном месте, если Вы закрыли приложение в момент показа Вам погодных данных, или список мест.
        Для получения погодных данных Вам нужно всего лишь нажать (кликнуть) на название места в одном из двух списков мест.
        \n
        В приложении \"Погодушка\" места разделяются на две категории:
    </string>
    <string name="fragment_help_text_second">
        Они формируют два независимых списка, каждый из которых можно вызвать нажав на соответствующую иконку.
        \n
        При первом запуске Вам доступен следующий базовый список мест:
        \"Россия\": Москва, Санкт-Петербург, Новосибирск, Екатеринбург, Нижний Новгород, Казань, Челябинск, Омск, Ростов-на-Дону, Уфа;\n
        \"Не Россия\": Лондон, Токио, Париж, Берлин, Рим, Минск, Стамбул, Вашингтон, Киев, Пекин.\n
        \n
        Вы можете корректировать эти списки по своему желанию.\n
        Доступны следующие операции: добавление нового места, редактирование карточки места (сведений о месте), удаление места.\n
        Основными сведениями о месте, содержащимися в его карточке, являются: название места, географические координаты, название страны места.\n
        Для операций редактирования карточки места или его удаления можно нажать на соответствующий пункт в списке мест и подержать, не отрываясь от него, более 2 секунд.\n
        После этого, появится всплывающее меню, в котором можно выбрать одну из данных операций.
        Для добавления нового места нужно нажать на следующую кнопку в верхней строке меню приложения:
    </string>
    <string name="fragment_help_text_third">
        В появившемся меню можно заполнить только название интересующего Вас места и нажать на кнопку "Сохранить".\n
        Приложение само поищет по всему свету место с похожим названием и предложит Вам на выбор список таких мест.\n
        Нажав на предложенный список таких мест, вы добавите его в конец списка, соответствующего типу страны данного места.\n
        Вы так же можете указать не только название места, но и его географические координаты (если их знаете), а также страну.\n
        Страну желательно указывать, потому что от неё зависит в каком списке ваше место будет отображаться.\n
        \n
        В приложении "Погодушка" Вам доступна история просмотренных погодных данных по каждому выбранному месту. Для этого нужно нажать на следующую кнопку в верхнем меню приложения:
    </string>
</resources>