<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_app_menu_action_add_city"
        android:title="@string/app_menu_action_add_city_title_text"
        app:showAsAction="always"
        android:icon="@drawable/add_city" />

    <item
        android:id="@+id/action_app_menu_open_weather_history"
        android:title="@string/app_menu_action_open_weather_history_title_text"
        app:showAsAction="always"
        android:icon="@drawable/get_weather_history" />

    <item
        android:id="@+id/action_app_menu_open_contacts"
        android:title="@string/app_menu_open_contacts_title_text"
        app:showAsAction="never"
        android:icon="@drawable/get_contacts" />
</menu>