<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background_text_color"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/card_city_title_margin"
        android:text="@string/card_city_title_text"
        android:textColor="@color/gray_text"
        android:textSize="@dimen/card_city_title_text_size" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/card_city_city_name_margin_start"
            android:ems="7"
            android:text="@string/card_city_city_name_text"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/card_city_city_name_text_size" />

        <EditText
            android:id="@+id/input_city_info_city_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/card_city_city_name_field_margin_end"
            android:cursorVisible="true"
            android:ems="8"
            android:inputType="text"
            android:text="@string/card_city_city_name_field_example_text"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/card_city_city_name_field_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/card_city_lan_margin_start"
            android:ems="7"
            android:text="@string/card_city_lat_text"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/card_city_lan_text_size" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/input_city_info_lat_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/card_city_lan_margin_end"
                android:cursorVisible="true"
                android:ems="8"
                android:inputType="number"
                android:text="@string/card_city_lat_field_example_text"
                android:textColor="@color/gray_text"
                android:textSize="@dimen/card_city_lan_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/card_city_lat_comments_text"
                android:textSize="@dimen/card_city_lan_comments_text_size" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/card_city_lon_margin_start"
            android:ems="7"
            android:text="@string/card_city_lon_text"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/card_city_lon_text_size" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/input_city_info_lon_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/card_city_lon_field_margin_end"
                android:cursorVisible="true"
                android:ems="8"
                android:inputType="number"
                android:text="@string/card_city_lon_field_example_text"
                android:textColor="@color/gray_text"
                android:textSize="@dimen/card_city_lon_field_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/card_city_lon_comments_text"
                android:textSize="@dimen/card_city_lat_comments_text_size" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/card_city_country_info_margin_start"
            android:ems="7"
            android:text="@string/card_city_country_info_text"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/card_city_country_info_text_size" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/input_city_info_country_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/card_city_country_info_field_margin_end"
                android:cursorVisible="true"
                android:ems="8"
                android:inputType="text"
                android:text="@string/card_city_country_info_field_example_text"
                android:textColor="@color/gray_text"
                android:textSize="@dimen/card_city_country_info_field_text_size" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/card_city_info_country_russian_button"
                    android:layout_width="@dimen/card_city_info_country_russian_button_width"
                    android:layout_height="@dimen/card_city_info_country_russian_button_height"
                    android:background="@drawable/ic_russia" />

                <Switch
                    android:id="@+id/card_city_info_country_rus_notrus_switch"
                    tools:ignore="UseSwitchCompatOrMaterialXml"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/card_city_info_country_notrussian_button"
                    android:layout_width="@dimen/card_city_info_country_notrussian_button_width"
                    android:layout_height="@dimen/card_city_info_country_notrussian_button_height"
                    android:background="@drawable/ic_earth_gray" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit_city_info_button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/button_cancel_margin"
            android:backgroundTint="@color/background_list_color"
            android:text="@string/card_city_info_button_cancel_text"
            android:textColor="@color/gray_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit_city_info_button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/button_ok_margin"
            android:backgroundTint="@color/background_list_color"
            android:text="@string/card_city_info_button_ok_text"
            android:textColor="@color/gray_text" />
    </LinearLayout>
</LinearLayout>