<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app_menu"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/fragment_contacts_request_title_margin"
        android:gravity="center"
        android:text="@string/fragment_contacts_request_title_text"
        android:textColor="@color/gray_text"
        android:textSize="@dimen/fragment_contacts_request_title_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/fragment_contacts_request_family_title_margin_start"
            android:ems="5"
            android:text="@string/fragment_contacts_request_family_title_text"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/fragment_contacts_request_family_title_text_size" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/fragment_contacts_request_family_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/fragment_contacts_request_family_field_margin_end"
                android:cursorVisible="true"
                android:ems="11"
                android:inputType="text"
                android:text="@string/fragment_contacts_request_family_field_text"
                android:textColor="@color/gray_text"
                android:textSize="@dimen/fragment_contacts_request_family_field_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/fragment_contacts_request_family_field_comments_text"
                android:textSize="@dimen/fragment_contacts_request_family_field_comments_text_size" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/fragment_contacts_request_name_title_margin_start"
            android:ems="5"
            android:text="@string/fragment_contacts_request_name_title_text"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/fragment_contacts_request_name_title_text_size" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

        <EditText
            android:id="@+id/fragment_contacts_request_name_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/fragment_contacts_request_name_field_margin_end"
            android:cursorVisible="true"
            android:ems="11"
            android:inputType="text"
            android:text="@string/fragment_contacts_request_name_field_text"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/fragment_contacts_request_name_field_text_size" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/fragment_contacts_request_patronymic_title_margin_left"
            android:ems="5"
            android:text="@string/fragment_contacts_request_patronymic_title_text"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/fragment_contacts_request_patronymic_title_text_size" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/fragment_contacts_request_patronymic_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/fragment_contacts_request_patronymic_field_margin_end"
                android:cursorVisible="true"
                android:ems="11"
                android:inputType="text"
                android:text="@string/fragment_contacts_request_patronymic_field_text"
                android:textColor="@color/gray_text"
                android:textSize="@dimen/fragment_contacts_request_patronymic_field_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/fragment_contacts_request_patronymiс_comments_text"
                android:textSize="@dimen/fragment_contacts_request_patronymiс_comments_text_size" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fragment_contacts_request_button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/button_cancel_margin"
            android:backgroundTint="@color/background_list_color"
            android:text="@string/fragment_contacts_request_button_cancel_text"
            android:textColor="@color/gray_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fragment_contacts_request_button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/button_ok_margin"
            android:backgroundTint="@color/background_list_color"
            android:text="@string/fragment_contacts_request_button_ok_text"
            android:textColor="@color/gray_text" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/fragment_container_for_contacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/fragment_container_for_contacts_padding" />
    </ScrollView>

</LinearLayout>