<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/background_text_color"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_fragment_delete_conformation_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="@dimen/dialog_fragment_delete_conformation_margin"
        android:text="@string/dialog_fragment_delete_conformation_title_text"
        android:textColor="@color/gray_text"
        android:textSize="@dimen/dialog_fragment_delete_conformation_text_size" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/way_input_button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/button_cancel_margin"
            android:backgroundTint="@color/background_list_color"
            android:text="@string/dialog_fragment_delete_conformation_button_no_text"
            android:textColor="@color/gray_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/way_input_button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/button_ok_margin"
            android:backgroundTint="@color/background_list_color"
            android:text="@string/dialog_fragment_delete_conformation_button_yes_text"
            android:textColor="@color/gray_text" />
    </LinearLayout>
</LinearLayout>